--- a/404.md
+++ b/404.md
@@ -99,3 +99,17 @@ body:after{
   }
 }  
 </style>
+
+
+<script>
+  var inner = document.querySelector('.markdown-body > h1 > a')
+  var t = 5;
+  inner.innerText = `Không tìm thấy trang, chuyển về trang chủ sau 5 giây . . .`;
+  setInterval(function(){
+    t = t-1;
+    document.title = `(${t}) | Không tìm thấy trang | 404 Not Found`;
+    inner.innerText = `Không tìm thấy trang, chuyển về trang chủ sau ${t} giây . . .`;
+  }, 1000);
+  setTimeout(function(){window.location.href='/?ctv=404page'}, 5000)
+   
+</script>
