--- a/404.md
+++ b/404.md
@@ -110,6 +110,6 @@ body:after{
     document.title = `(${t}) | Không tìm thấy trang | 404 Not Found`;
     inner.innerText = `Không tìm thấy trang, chuyển về trang chủ sau ${t} giây . . .`;
   }, 1000);
-  setTimeout(function(){window.location.href='/?ctv=404page'}, 5000)
+  setTimeout(function(){window.location.href='/'}, 5000)
    
 </script>
